# storage

./: .env.sample  .gitignore  Cargo.toml  README.md  config.sample.toml
.github/workflows/: rust.yml
migrations/: default.sql
server/: .env  Cargo.toml
server/config/: general.toml
server/src/: consts.rs  guards.rs  helpers.rs  main.rs  models.rs  objs.rs  routes.rs  storage.rs  user.rs  util.rs
server/src/managers/: libraries.rs
server/src/models/: user.rs
server/src/objs/: library.rs
server/src/routes/: ui.rs
server/src/routes/api/: library.rs
server/src/routes/ui/: auth.rs  help.rs  user.rs
server/src/routes/ui/auth/: forgot_password.rs  register.rs
server/src/storage/: local.rs  s3.rs
server/static/css/: main.css
server/templates/: about.html.hbs  index.html.hbs  libraries.html.hbs
server/templates/auth/: forgot-password.html.hbs  login.html.hbs  register.html.hbs
server/templates/layouts/: default.html.hbs  main.html.hbs
server/templates/partials/: nav.html.hbs  sidebar.html.hbs
src/: config.rs  consts.rs  library.rs  main.rs  managers.rs  storage.rs  util.rs
src/managers/: libraries.rs  repos.rs  sso.rs  user.rs
src/models/: library.rs  repo.rs  user.rs
src/objs/: library.rs  repo.rs
src/routes/: ui.rs
src/storage/: local.rs
static/css/: main.css
static/js/: add_button.js
storage/: bruno.json
templates/: about.html.hbs  index.html.hbs  libraries.html.hbs  settings.html.hbs
templates/auth/: login.html.hbs
templates/errors/: 403.html.hbs  404.html.hbs  500.html.hbs
web/: package.json  vite.config.ts
(+19 files in other folders)
