[package]
name = "storage-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
log = "0.4.25"
tracing-subscriber = {  version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
anyhow = "1.0.98"
serde = "1.0.219"
serde_json = "1.0.140"
int-enum = "1.2.0"
dotenvy = "0.15.7"
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
humanize-bytes = "1.0.6"
rocket-session-store = "0.2.1"
uuid = { version = "1.16.0", features = ["v4"] }
rand = { version = "0.9.0", features = ["thread_rng"] }
bcrypt = "0.17.0"